# SoapyMalahitRR

./: CMakeLists.txt  GPIO.cpp  MalahitSDR.cpp  MalahitSDR.hpp  STM.cpp  STM.hpp  malahit-id.sh
debian/: changelog  control  soapysdr0.8-module-malahit-rr.install
getting-started/: getting-started-en.html  getting-started-ru.html  index.html
malahit/: Makefile  malahit.cpp
malahit-id/: malahit-id.service
sd-card-setup/: generic_audio_out_i2s_slave.dts  getting-started.txt  sd-card-setup.sh  settings.json
setup/: install-malahit.sh  settings.json
